@@ -1,3 +1,7 @@
+2010-06-06  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-site.el: Search global for CEDET.
+
 2010-06-05  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el: Open semanticdb-enable-gnu-global-databases for
